more swagger fixes
